benchmark: default compare-performance to Cloffle direct linking
Turn on guest direct linking by default so snippets like ring-response
measure KeywordAssoc/UtilEquiv fast paths. Add cloffle-java and
cloffle-jvm-opts build helpers for consistent Truffle JVM flags on CLI runs.
Refresh benchmark-results.md from a full catalog run with direct linking on.

Signed-off-by: The-Alchemist <karl@digital-alchemy.io>